# zermelo-rs

./: .travis.yml  Cargo.toml  README.md
examples/: schedule.rs
src/: appointment.rs  lib.rs  schedule.rs
