[package]
authors = ["Splinter Suidman"]
description = "A library that retrieves a schedule from Zermelo."
keywords = [
    "zermelo",
    "schedule",
]
license = "MIT"
name = "zermelo"
readme = "README.md"
homepage = "https://github.com/splintah/zermelo-rs"
repository = "https://github.com/splintah/zermelo-rs"
documentation = "https://docs.rs/zermelo"
version = "0.1.7"

[badges]
travis-ci = { repository = "splintah/zermelo-rs", branch = "master" }

[dependencies]
reqwest = "0.8.1"
serde = "1.0.19"
serde_derive = "1.0.19"
serde_json = "1.0.5"

[dev-dependencies]
chrono = "0.4.0"
