[package]
authors = ["Splinter Suidman"]
description = "A library that retrieves a schedule from Zermelo."
documentation = "https://docs.rs/zermelo"
homepage = "https://github.com/splintah/zermelo-rs"
keywords = [
    "zermelo",
    "schedule",
]
license = "MIT"
name = "zermelo"
readme = "README.md"
repository = "https://github.com/splintah/zermelo-rs"
version = "0.4.1"

[badges.travis-ci]
branch = "master"
repository = "splintah/zermelo-rs"

[dependencies]
reqwest = "0.8.1"
serde = "1.0.19"
serde_derive = "1.0.19"
serde_json = "1.0.5"

[dev-dependencies]
chrono = "0.4.0"
